--- a/src/theme/css/searchbar.css
+++ b/src/theme/css/searchbar.css
@@ -1,4 +1,4 @@
-@require 'variables'
+@import "variables.css";
 
 #searchresults a {
     text-decoration: none;
@@ -19,7 +19,7 @@ mark {
     display: none;
     margin-left: auto;
     margin-right: auto;
-    max-width: $content-max-width;
+    max-width: var(--content-max-width);
 }
 
 #searchbar {
@@ -40,28 +40,28 @@ mark {
     display: none;
     margin-left: auto;
     margin-right: auto;
-    max-width: $content-max-width;
+    max-width: var(--content-max-width);
 }
 
 ul#searchresults {
     list-style: none;
     padding-left: 20px;
+}
 
-    li {
-        margin: 10px 0px;
-        padding: 2px;
-        border-radius: 2px;
-    }
+ul#searchresults li {
+    margin: 10px 0px;
+    padding: 2px;
+    border-radius: 2px;
+}
 
-    span.teaser {
-        display: block;
-        clear: both;
-        margin: 5px 0 0 20px;
-        font-size: 0.8em;
-    }
+ul#searchresults span.teaser {
+    display: block;
+    clear: both;
+    margin: 5px 0 0 20px;
+    font-size: 0.8em;
+}
 
-    span.teaser em {
-        font-weight: bold;
-        font-style: normal;
-    }
+ul#searchresults span.teaser em {
+    font-weight: bold;
+    font-style: normal;
 }
