--- a/src/theme/stylus/page.styl
+++ b/src/theme/stylus/page.styl
@@ -2,20 +2,18 @@
 
 .page-wrapper {
     box-sizing: border-box
+    left: 0
+    position: absolute
+    right: 0
+    top: 0
+    bottom: 0
 
     // Animation: slide away
-    transition: padding-left 0.5s, margin-left 0.5s
+    transition: padding-left 0.5s, margin-left 0.5s, left 0.5s
 }
 
 .sidebar-visible .page-wrapper {
-    padding-left: $sidebar-width
-}
-
-@media only screen and (max-width: $page-plus-sidebar-width - 1) {
-    .sidebar-visible .page-wrapper {
-        padding-left: 0
-        margin-left: $sidebar-width
-    }
+    left: $sidebar-width
 }
 
 .page {
@@ -24,10 +22,20 @@
 }
 
 .content {
-    margin-left: auto
-    margin-right: auto
-    max-width: $content-max-width
+    position: relative
+    top: 0
+    bottom: 0
+    overflow-y: auto
+    right: 0
+    left: 0
+    padding: 0 15px
     padding-bottom: 50px
+
+    main {
+        margin-left: auto
+        margin-right: auto
+        max-width: $content-max-width
+    }
 
     a {
         text-decoration: none;
@@ -35,4 +43,9 @@
     }
 
     img { max-width: 100%; }
+}
+
+.sidebar-visible .content {
+    position: absolute
+    top: 52px
 }
