--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -137,33 +137,45 @@ table thead td {
   white-space: nowrap;
 }
 .page-wrapper {
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-transition: padding-left 0.5s, margin-left 0.5s;
-  -moz-transition: padding-left 0.5s, margin-left 0.5s;
-  -o-transition: padding-left 0.5s, margin-left 0.5s;
-  -ms-transition: padding-left 0.5s, margin-left 0.5s;
-  transition: padding-left 0.5s, margin-left 0.5s;
+  -webkit-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
+  -moz-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
+  -o-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
+  -ms-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
+  transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
 }
 .sidebar-visible .page-wrapper {
-  padding-left: 300px;
-}
-@media only screen and (max-width: 1079px) {
-  .sidebar-visible .page-wrapper {
-    padding-left: 0;
-    margin-left: 300px;
-  }
+  left: 300px;
 }
 .page {
   outline: 0;
   padding: 0 15px;
 }
 .content {
+  position: relative;
+  top: 0;
+  bottom: 0;
+  overflow-y: auto;
+  right: 0;
+  left: 0;
+  padding: 0 15px;
+  padding-bottom: 50px;
+}
+.sidebar-visible .content {
+  position: absolute;
+  top: 52px;
+}
+.content > main {
   margin-left: auto;
   margin-right: auto;
   max-width: 750px;
-  padding-bottom: 50px;
 }
 .content a {
   text-decoration: none;
