--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -137,42 +137,28 @@ table thead td {
   white-space: nowrap;
 }
 .page-wrapper {
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  bottom: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
-  -moz-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
-  -o-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
-  -ms-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
-  transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
+  -webkit-transition: margin-left 0.5s;
+  -moz-transition: margin-left 0.5s;
+  -o-transition: margin-left 0.5s;
+  -ms-transition: margin-left 0.5s;
+  transition: margin-left 0.5s;
 }
 .sidebar-visible .page-wrapper {
-  left: 300px;
+  margin-left: 300px;
 }
 .page {
   outline: 0;
   padding: 0 15px;
 }
 .content {
-  position: relative;
-  top: 0;
-  bottom: 0;
   overflow-y: auto;
-  right: 0;
-  left: 0;
   padding: 0 15px;
   padding-bottom: 50px;
 }
-.sidebar-visible .content {
-  position: absolute;
-  top: 52px;
-}
-.content > main {
+.content main {
   margin-left: auto;
   margin-right: auto;
   max-width: 750px;
@@ -1406,13 +1392,11 @@ mark {
   background-color: rgba(0,0,0,0) !important;
 }
 .searchbar-outer {
-  display: none;
   margin-left: auto;
   margin-right: auto;
   max-width: 750px;
 }
 #searchbar {
-  display: block;
   width: 100%;
   margin: 5px auto 0px auto;
   padding: 10px 16px;
@@ -1428,7 +1412,6 @@ mark {
   padding: 18px 0 0 5px;
 }
 .searchresults-outer {
-  display: none;
   margin-left: auto;
   margin-right: auto;
   max-width: 750px;
