--- a/src/theme/stylus/variables.styl
+++ b/src/theme/stylus/variables.styl
@@ -1,4 +1,6 @@
 $sidebar-width = 300px
 $page-padding = 15px
 $content-max-width = 750px
+$content-min-width = 320px
 $page-plus-sidebar-width = $content-max-width + $sidebar-width + $page-padding * 2
+$sidebar-reflow-width = $sidebar-width + $content-min-width
