--- a/src/theme/stylus/menu.styl
+++ b/src/theme/stylus/menu.styl
@@ -7,7 +7,7 @@
     & > #menu-bar-sticky-container {
         display: flex
         flex-wrap: wrap
-        transition: transform 0.3s, border-bottom-color 0.5s
+        transition: transform 0.3s
     }
 
     i, .icon-button {
