--- a/src/theme/stylus/page.styl
+++ b/src/theme/stylus/page.styl
@@ -4,7 +4,9 @@
     box-sizing: border-box
 
     // Animation: slide away
-    transition: margin-left 0.3s ease, transform 0.3s ease
+    .js & {
+        transition: margin-left 0.3s ease, transform 0.3s ease
+    }
 }
 
 .sidebar-visible .page-wrapper {
