--- a/src/theme/stylus/searchbar.styl
+++ b/src/theme/stylus/searchbar.styl
@@ -9,10 +9,12 @@ mark {
     padding: 0 3px 1px 3px;
     margin: 0 -3px -1px -3px;
     transition: background-color 300ms linear;
+    cursor: pointer;
 }
 
-.fade-out {
-    background-color: rgba(0,0,0,0) !important
+mark.fade-out {
+    background-color: rgba(0,0,0,0) !important;
+    cursor: auto;
 }
 
 .searchbar-outer {
