--- a/src/theme/stylus/sidebar.styl
+++ b/src/theme/stylus/sidebar.styl
@@ -14,7 +14,9 @@
     overscroll-behavior-y: contain;
 
     // Animation: slide away
-    transition: transform 0.3s
+    .js & {
+        transition: transform 0.3s
+    }
 
     code {
         line-height: 2em;
