--- a/src/theme/stylus/menu.styl
+++ b/src/theme/stylus/menu.styl
@@ -20,6 +20,10 @@
         cursor: pointer
         transition: color 0.5s
     }
+
+    #print-button {
+        margin: 0 15px
+    }
 }
 
 html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-container {
