Put the search bar into an HTML form
This enables "Add a keyword for this search" in the contex menu for the
search field, in Firefox and other browsers.

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -116,9 +116,9 @@
 
                 {{#if search_enabled}}
                 <div id="search-wrapper" class="hidden">
-                    <div id="searchbar-outer" class="searchbar-outer">
-                        <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ..." aria-controls="searchresults-outer" aria-describedby="searchresults-header">
-                    </div>
+                    <form id="searchbar-outer" class="searchbar-outer">
+                        <input type="search" name="search" id="searchbar" name="searchbar" placeholder="Search this book ..." aria-controls="searchresults-outer" aria-describedby="searchresults-header">
+                    </form>
                     <div id="searchresults-outer" class="searchresults-outer hidden">
                         <div id="searchresults-header" class="searchresults-header"></div>
                         <ul id="searchresults">
