Update print styles for new sidebar behavior

--- a/src/theme/stylus/print.styl
+++ b/src/theme/stylus/print.styl
@@ -7,13 +7,10 @@
         display: none
     }
 
-    #page-wrapper {
-        left: 0;
-        overflow-y: initial;
-    }
-
     #page-wrapper.page-wrapper {
-        padding-left: 0px;
+        transform: none;
+        margin-left: 0px;
+        overflow-y: initial;
     }
 
     #content {
@@ -46,7 +43,6 @@
     h1, h2, h3, h4, h5, h6 {
         page-break-inside: avoid
         page-break-after: avoid
-        /*break-after: avoid*/
     }
 
     pre, code {
