--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -1322,12 +1322,14 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
   .mobile-nav-chapters {
     display: none;
   }
-  #page-wrapper {
-    left: 0;
-    overflow-y: initial;
-  }
   #page-wrapper.page-wrapper {
-    padding-left: 0px;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -o-transform: none;
+    -ms-transform: none;
+    transform: none;
+    margin-left: 0px;
+    overflow-y: initial;
   }
   #content {
     max-width: none;
@@ -1361,7 +1363,6 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
   h6 {
     page-break-inside: avoid;
     page-break-after: avoid;
-/*break-after: avoid*/
   }
   pre,
   code {
