--- a/src/theme/stylus/print.styl
+++ b/src/theme/stylus/print.styl
@@ -53,4 +53,8 @@
         white-space: -o-pre-wrap    /* Opera 7 */
         word-wrap: break-word       /* Internet Explorer 5.5+ */
     }
+
+    .fa {
+        display: none !important 
+    }
 }
