--- a/src/theme/stylus/print.styl
+++ b/src/theme/stylus/print.styl
@@ -47,11 +47,7 @@
 
     pre, code {
         page-break-inside: avoid
-        white-space: pre-wrap       /* CSS 3 */
-        white-space: -moz-pre-wrap  /* Mozilla, since 1999 */
-        white-space: -pre-wrap      /* Opera 4-6 */
-        white-space: -o-pre-wrap    /* Opera 7 */
-        word-wrap: break-word       /* Internet Explorer 5.5+ */
+        white-space: pre-wrap
     }
 
     .fa {
