Change mathjax script type Chrome won't execute this if it's not marked as js

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -240,7 +240,7 @@
 
         {{#if is_print}}
         {{#if mathjax_support}}
-        <script type="text/x-mathjax-config">
+        <script type="text/javascript">
         MathJax.Hub.Register.StartupHook("End", function() {
             window.print();
         });
