Ensure page has rendered before printing In certain situations Chrome willl fire window.onLoad before it's done rendering. Add a 100ms delay to work around this.

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -241,14 +241,16 @@
         {{#if is_print}}
         {{#if mathjax_support}}
         <script type="text/javascript">
-        MathJax.Hub.Register.StartupHook("End", function() {
-            window.print();
+        window.addEventListener('load', function() {
+            MathJax.Hub.Register.StartupHook('End', function() {
+                window.setTimeout(window.print, 100);
+            });
         });
         </script>
         {{else}}
         <script type="text/javascript">
-        document.addEventListener('DOMContentLoaded', function() {
-            window.print();
+        window.addEventListener('load', function() {
+            window.setTimeout(window.print, 100);
         });
         </script>
         {{/if}}
