Improve print output (#680)
* Update print styles for new sidebar behavior

* Hide copy icons in print output

* Wait for mathjax rendering to complete before printing

* Remove old wrapping css
Browsers this old are already hilariously broken, so we don't need these fallbacks.

* Change mathjax script type
Chrome won't execute this if it's not marked as js

* Ensure page has rendered before printing
In certain situations Chrome willl fire window.onLoad before it's
done rendering. Add a 100ms delay to work around this.

--- a/src/theme/stylus/print.styl
+++ b/src/theme/stylus/print.styl
@@ -7,13 +7,10 @@
         display: none
     }
 
-    #page-wrapper {
-        left: 0;
-        overflow-y: initial;
-    }
-
     #page-wrapper.page-wrapper {
-        padding-left: 0px;
+        transform: none;
+        margin-left: 0px;
+        overflow-y: initial;
     }
 
     #content {
@@ -46,15 +43,14 @@
     h1, h2, h3, h4, h5, h6 {
         page-break-inside: avoid
         page-break-after: avoid
-        /*break-after: avoid*/
     }
 
     pre, code {
         page-break-inside: avoid
-        white-space: pre-wrap       /* CSS 3 */
-        white-space: -moz-pre-wrap  /* Mozilla, since 1999 */
-        white-space: -pre-wrap      /* Opera 4-6 */
-        white-space: -o-pre-wrap    /* Opera 7 */
-        word-wrap: break-word       /* Internet Explorer 5.5+ */
+        white-space: pre-wrap
+    }
+
+    .fa {
+        display: none !important 
     }
 }
