--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -11,7 +11,7 @@ body {
 
 code {
     font-family: "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace, monospace;
-    font-size: 0.875em;
+    font-size: 0.875em; // please adjust the ace font size accordingly in editor.js
 }
 
 .left {
