--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -1,5 +1,5 @@
 html {
-  font-family: "Open Sans", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
   color: #333;
 }
 body {
@@ -8,7 +8,7 @@ body {
   overflow-x: hidden;
 }
 code {
-  font-family: "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace, monospace;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 0.875em;
 }
 .left {
