--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -1,6 +1,6 @@
 html {
-    font-family: "Open Sans", sans-serif
-    color: #333
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+    color: #333;
 }
 
 body {
@@ -10,7 +10,7 @@ body {
 }
 
 code {
-    font-family: "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace, monospace;
+    font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 0.875em;
 }
 
