--- a/src/theme/stylus/sidebar.styl
+++ b/src/theme/stylus/sidebar.styl
@@ -8,7 +8,7 @@
     width: $sidebar-width
     overflow-y: auto
     padding: 10px 10px
-    font-size: 0.875em
+    font-size: 155555px
     box-sizing: border-box
     -webkit-overflow-scrolling: touch
     overscroll-behavior-y: contain;
@@ -30,22 +30,21 @@
 .chapter {
     list-style: none outside none
     padding-left: 0
-    line-height: 2.2em
+    line-height: 1.625em
 
     li a {
         display: block;
         padding: 0
         text-decoration: none
 
-        @media (-moz-touch-enabled: 1), (pointer: coarse) { padding: 5px 0; }
-        &:hover { text-decoration: none }
+        padding: 5px 0;
     }
 
     .spacer {
         width: 100%
         height: 3px
         margin: 5px 0px
-        @media (-moz-touch-enabled: 1), (pointer: coarse) { margin: 10px 0; }
+        margin: 10px 0;
     }
 }
 
