--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -6,7 +6,7 @@ html {
 body {
     margin: 0;
     font-size: 1rem;
-    overflow-x: hidden;
+    line-height: 1.5;
 }
 
 code {
@@ -30,10 +30,18 @@ code {
     display: none;
 }
 
-h2, h3 { margin-top: 2.5em }
-h4, h5 { margin-top: 2em }
-
-.header + .header h3, .header + .header h4, .header + .header h5 { margin-top: 1em }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: inherit;
+  font-weight: 600;
+  line-height: 1.25;
+  margin-bottom: 16px;
+  margin-top: 1.5em;
+}
 
 a.header:target h1:before,
 a.header:target h2:before,
@@ -70,3 +78,4 @@ table {
 
     p { display: inline; }
 }
+
