--- a/src/theme/stylus/variables.styl
+++ b/src/theme/stylus/variables.styl
@@ -4,3 +4,4 @@ $content-max-width = 750px
 $content-min-width = 320px
 $page-plus-sidebar-width = $content-max-width + $sidebar-width + $page-padding * 2
 $sidebar-reflow-width = $sidebar-width + $content-min-width
+$narrow-device-max-width = 420px
