--- a/src/theme/stylus/menu.styl
+++ b/src/theme/stylus/menu.styl
@@ -15,6 +15,9 @@
     i, .icon-button {
         position: relative
         margin: 0 10px
+        @media only screen and (max-width: $narrow-device-max-width) {
+            margin: 0 5px
+        }
         z-index: 10
         line-height: 50px
         cursor: pointer
