--- a/src/theme/css/variables.css
+++ b/src/theme/css/variables.css
@@ -6,8 +6,8 @@
     --page-padding: 15px;
     --content-max-width: 750px;
     --content-min-width: 320px;
-    --page-plus-sidebar-width: var(--content-max-width) + var(--sidebar-width) + var(--page-padding) * 2;
-    --sidebar-reflow-width: var(--sidebar-width) + var(--content-min-width);
+    --page-plus-sidebar-width: calc(var(--content-max-width) + var(--sidebar-width) + var(--page-padding) * 2);
+    --sidebar-reflow-width: calc(var(--sidebar-width) + var(--content-min-width));
     --narrow-device-max-width: 420px;
 }
 
