Fix favicon in subfolders

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="shortcut icon" href="{{ favicon }}">
+        <link rel="shortcut icon" href="{{ path_to_root }}{{ favicon }}">
         <link rel="stylesheet" href="{{ path_to_root }}css/variables.css">
         <link rel="stylesheet" href="{{ path_to_root }}css/general.css">
         <link rel="stylesheet" href="{{ path_to_root }}css/chrome.css">
